<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Talkly</string>
    <string name="hello_world">Hello world!</string>

    <!-- LoginActivity -->
    <string name="title_activity_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_remember">Rembember</string>
    <string name="login_empty_fields">Enter your username and password.</string>
    <string name="login_wrong_username_or_password">Wrong username or password.</string>

    <!-- Menu -->
    <string name="action_connect">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_autologin">Log in automatically</string>
    <string name="settings_autologin_summary">User account automatically logs in.</string>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="about_whatisthis">Talkly - The walkie-talkie </string>
    <string name="about_createdfor">BA Thesis Project</string>
    <string name="about_year">2014-2015</string>

    <!-- Main -->
    <string name="chat_message_input_hint">Write a message</string>
    <string name="chat_button_send">Send</string>

    <!-- Fragment -->
    <string name="fragment_error">Fragment error!</string>

    <!-- Mqtt -->
    <string name="mqtt_connected">Connected to the server.</string>
    <string name="mqtt_not_connected">Not connected to the server.</string>
    <string name="mqtt_connection_lost">Connection lost.</string>
    <string name="mqtt_connection_failure">Can\'t connect to the server.</string>
    <string name="mqtt_disconnection_failure">Can\'t disconnect from the server.</string>

    <!-- GPS -->
    <string name="gps_no_data">There is no GPS information.</string>

    <!-- Drawer -->
    <string name="drawer_open">@string/app_name</string>
    <string name="drawer_close">{room}</string>
    <string name="drawer_downloaded">Downloaded</string>
    <string name="drawer_uploaded">Uploaded</string>

    <!-- Preferences -->
    <string name="pref_username">pref_username</string>
    <string name="pref_password">pref_password</string>
    <string name="pref_autologin">pref_autologin</string>

</resources>
