<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_login_layout"
        android:padding="15dp"
        android:id="@+id/linearLayout"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_username"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/login_username"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/login_password"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_remember"
            android:id="@+id/check_box_remember"
            android:textSize="14sp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login"
            android:id="@+id/login_button"
            android:onClick="loginOnClick"
            android:stateListAnimator="@anim/raise"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/red_400"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

</RelativeLayout>
